docs(W6-8): the Field.get over-deny row was stale — wave 8 closed it the day it was filed
W6-8's first OPEN row said `Field.get`/`Field.set` ask the `opens` question
unconditionally and so refuse public fields of exported-but-not-opened packages
that HotSpot 25 reads fine. Checked against the source before writing anything,
per this campaign's standing warning that a record's hand-off patch is often
already in the tree.

`enforce_module_check_on_field` calls `check_reflection_export_access_with_target_id`
— the `exports` gate — on ONE arm for public and non-public fields alike. The
`is_public` split the row prescribed was not added, it was dissolved. It landed
in dcfe77cb8 (wave 8) on 2026-08-07, the same day this page was filed, from a
different lane; `git log -S` on the call expression names that one commit.

Wave 8 also found the half the row did not see: a public arm returning Ok
unconditionally is an UNDER-denial (`Unsafe.INVALID_FIELD_OFFSET` must throw
with no flags at all), so the row's own one-line prescription would have traded
the over-deny for an under-deny. Recorded as such — a record's prescribed fix
can be wrong even when its diagnosis is right.

What is left is a hazard, not a defect. `enforce_module_check_from_mirror` is
the last caller of the `opens`-asking wrapper and is now CALLER-FREE, three
screens above the live `exports` gate, invisible because `dead_code` is allowed
crate-wide. It now carries a doc comment saying it must not be re-pointed at a
get/set/invoke path, with the measurement showing why (`--add-opens
java.base/java.lang=ALL-UNNAMED` does not make `String.hash` readable). Kept
rather than deleted: it is the surviving in-source statement of the
opens-vs-exports distinction. No behaviour change.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>